Update 'x4rqetxwb-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:f1b8f9a161ea604f5d203387fe5e0de6c0d9d5b8@sha256:f6ec74eb839ed52177c68983913e90f33f655e0a540bea287f2259bf59d82c46

--- a/components/x4rqetxwb-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/x4rqetxwb-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: x4rqetxwb-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:f1b8f9a161ea604f5d203387fe5e0de6c0d9d5b8@sha256:f6ec74eb839ed52177c68983913e90f33f655e0a540bea287f2259bf59d82c46
+          name: container-image
